force-app/main/default/objects/Credit_Application_Principal__c/Credit_Application_Principal__c.object-meta.xml
<CustomObject>
    <label>Credit Application Principal</label>
    <nameField>
        <label>List Of Principals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Application Principals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>