force-app/main/default/objects/Credit_Application_Principal__c/fields/Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application__c</fullName>
    <label>Credit Application</label>
    <referenceTo>Credit_Application_Form__c</referenceTo>
    <relationshipLabel>Credit Application Principals</relationshipLabel>
    <relationshipName>Credit_Application_Principals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>