force-app/main/default/objects/Credit_Application_Principal__c/listViews/List_Of_Principal.listView-meta.xml
<ListView>
    <fullName>List_Of_Principal</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Home_Phone__c</columns>
    <filterScope>Mine</filterScope>
    <label>List Of Principal</label>
</ListView>